# avm

./: .avm.json  .dockerignore  .gitignore  .goreleaser.yml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  agent.md  agent.skill.md  docker-compose.yml  go.mod  go.sum  install.sh  llm.text  main.go  package.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  npm-publish.yml  release.yml
Formula/: avm.rb
cmd/: add.go  env.go  init.go  list.go  plugin.go  remove.go  resolve.go  root.go  shell_init.go  tool.go  version.go  which.go
crates/avm-cli/: Cargo.toml
crates/avm-cli/src/: main.rs
crates/avm-cli/tests/: cli_scenarios.rs
crates/avm-core/: Cargo.toml
crates/avm-core/src/: config.rs  lib.rs  resolver.rs
crates/avm-plugin-api/: Cargo.toml
crates/avm-plugin-api/src/: lib.rs
crates/avm-plugin-node/: Cargo.toml
crates/avm-runtime/: Cargo.toml
crates/avm-shims/: Cargo.toml
doc/: ARCHITECTURE.md  DEVELOPMENT.md  FEATURES.md  FLOW.md  PLUGINS.md  improvement.md
docker/: .dockerignore  Dockerfile
docker/tests/: lib.sh  run-docker-tests.sh
docs/: README.md
docs/architecture/: ARCHITECTURE.md  FLOW.md
docs/migration/: RUST_REWRITE.md
docs/ops/: RELEASE.md  TESTING.md
internal/config/: actions.go  config.go  resolver.go  resolver_test.go
internal/plugin/: manager.go  manager_test.go  types.go
internal/tooling/: node.go  tooling.go
plugins/node/: plugin.json
scripts/: check-changelog.sh  check-release-version.sh
(+11 files in other folders)
