[workspace]
resolver = "2"
members = [
    "crates/avm-core",
    "crates/avm-cli",
    "crates/avm-plugin-api",
    "crates/avm-plugin-node",
    "crates/avm-runtime",
    "crates/avm-shims",
]

[workspace.dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
